--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,8 +62,8 @@ body {
 }
 
 .flip-button {
-  width: 160px;
-  height: 60px;
+  /* width: 160px; */
+  /* height: 60px; */
   transform-style: preserve-3d;
   transition: transform 0.5s;
 }
